--- a/lephora-server-api.yaml
+++ b/lephora-server-api.yaml
@@ -35,6 +35,22 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Commodity'
+  /order:
+    post:
+      operationId: 'create an order'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrderInfo'
+      responses:
+        '200':
+          description: 'create order success'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderBrief'
+
 components:
   schemas:
     Commodity:
@@ -85,3 +101,48 @@ components:
       required:
         - amount
         - unit
+    OrderInfo:
+      type: object
+      properties:
+        customerId:
+          example: '100000'
+          type: string
+        commoditySku:
+          example: '000001'
+          type: string
+        quantity:
+          example: 1
+          type: integer
+        address:
+          example: 'Shanghai Thoughtworks'
+          type: string
+        fullName:
+          example: 'Bob, Liu'
+          type: string
+        phoneNumber:
+          example: '13411011010'
+          type: string
+      required:
+        - customerId
+        - commoditySku
+        - quantity
+        - address
+        - fullName
+        - phoneNumber
+    OrderBrief:
+      type: object
+      properties:
+        orderId:
+          example: '000146351000'
+          type: string
+        orderStatus:
+          example: 'WAITING_FOR_PAY'
+          enum:
+            - 'WAITING_FOR_PAY'
+            - 'WAITING_FOR_DELIVERY'
+            - 'WAITING_FOR_ACCEPT'
+            - 'TRANSACTION_COMPLETE'
+            - 'TRANSACTION_CANCEL'
+      required:
+        - orderId
+        - orderStatus
